fikset headeren og navbaren til bootstrap versjon 5. og endret på filstrukturen

--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -27,8 +27,8 @@ body {
 
 
 /*Header styling: */
-.profile-img img{
-    width: 20px;   
+.profile-img-header img{
+    width: 20px !important;   
 }
 
 
@@ -68,11 +68,11 @@ body {
 }
 
 #point {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     display: flex;          
     justify-content: center; 
-    align-items: center;     
+    align-items: center;    
 } 
 
 #point p {
@@ -80,6 +80,18 @@ body {
     font-size: 24px;       
 }
 
+
+/*User_profile_two: */
+.gradient-custom-2 {
+    /* fallback for old browsers */
+    background: #fbc2eb;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
+}
 
 
   
