--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -82,16 +82,34 @@ body {
 
 
 /*User_profile_two: */
-.gradient-custom-2 {
-    /* fallback for old browsers */
-    background: #fbc2eb;
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
+.edit-profile:hover {
+    color: #0A3D62 !important;
+    background-color: #B3D8F2;
+    border-color: #B3D8F2;
 }
 
 
+.scroll-section {
+    max-height: 100px;
+    overflow-y: auto;
+  }
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #B3D8F2 !important;
+    background-color: #0A3D62 !important;
+}
+.nav-link {
+    display: block;
+    padding: .5rem 1rem;
+    color: #0A3D62 !important;
+    text-decoration: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+}
+
+.btn-primary {
+    color: #B3D8F2 !important;
+    background-color: #0A3D62 !important;
+    border-color: #0A3D62 !important;
+}
+  
   
